@@ -111,7 +111,7 @@ Post status setting was renamed to Default Post Status and moved to the Message 
 <h4>Post Date</h4>
 
 <ul>
-<li>Posts can have a specific publication date. Relative dates like "tomorrow", "monday", "first day of next month" are supported.
+<li>Posts can have a specific publication date such as Apr 14, 2013. Relative dates like "tomorrow", "monday", "first day of next month" are also supported.
 
 <ul>
 <li>date: date</li>
@@ -259,6 +259,7 @@ class='imagecaption'&gt;{CAPTION}&lt;/div&gt;&lt;/div&gt;</code></p>
 <li>{TITLE} same as {POSTTITLE}</li>
 <li>{URL} same as {FILELINK}</li>
 <li>{WIDTH} gets replaced with width of the photo</li>
+<li>{ICON} insert the icon for the attachment (for non-audio/image/video attachments only)</li>
 </ul></li>
 </ul>
 
