@@ -6,7 +6,7 @@ Plugin URI: http://PostiePlugin.com/
 Tags: e-mail, email
 Requires at least: 3.0
 Tested up to: 3.5.1
-Stable tag: 1.5.5
+Stable tag: 1.5.6
 License: GPLv2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
@@ -207,6 +207,7 @@ Note you can only use this feature if your "Preferred Text Type" is set to "plai
     * {TITLE} same as {POSTTITLE}
     * {URL} same as {FILELINK}
     * {WIDTH} gets replaced with width of the photo
+    * {ICON} insert the icon for the attachment (for non-audio/image/video attachments only)
 
 
 = Interoperability =
@@ -443,6 +444,15 @@ All script, style and body tags are stripped from html emails.
 Attachments are now processed in the order they were attached.
 
 == CHANGELOG ==
+= 1.5.6 (future) =
+* Fixed bug where default post format was empty when the theme didn't support any formats.
+* Removed all hard coded references to wp-content.
+* Fixed bug where caption wasn't being filled out in templates.
+* Updated direct DB access to use standard methods.
+* Added attachment template for non-audio/image/video attachments.
+* Added additional checks to the test screen.
+* Added new template variable {ICON}
+
 = 1.5.5 (2013.05.02) =
 * Added ability to run a manual check with debugging output.
 * Added support for default post type.
@@ -862,7 +872,6 @@ Attachments are now processed in the order they were attached.
       * No longer directly including pluggable.php (should
         prevent conflicts with other plugins such as registerplus
 
-
 =  1.1.5 (2009.03.10) =
   * Added option to have postie posts be pending review, published, or draft
   * Settings panel only shows up for administrators
@@ -889,8 +898,7 @@ Attachments are now processed in the order they were attached.
   * replying to an e*mail adds a comment to a post
   * fixed category handling to work with taxonomy
   * fixed one syntax error
-  * added option to wrap posts and comments in <pre%gt; tags
-
+  * added option to wrap posts and comments in <pre> tags
 
 =  1.1.1 =
 
@@ -926,21 +934,20 @@ plugin.  And the rest is history :)
 
 =  0.9.9.3.2 =
 * BUGFIX: Typo
+
 =  0.9.9.3.1 =
 * BUGFIX: Removed debugging code
 
 =  0.9.9.3 =
 * BUGFIX: If your email address matches an existing user - then it will post as that user - even if you allow anyone to post.
 * BUGFIX: Replaced get_settings('home') with get_settings('siteurl')
-* BUGFIX: Better handling for Japanese charactersets - Thanks to http://www.souzouzone.jp/blog/archives/009531.html
+* BUGFIX: Better handling for Japanese character sets - Thanks to http://www.souzouzone.jp/blog/archives/009531.html
 * BUGFIX: Better thumbnail window opening code - thanks to Gabi & Duntello!
 * FEATURE: Added an option to set the MAX Height of an image - idea from Duntello
 * BUGFIX: Modified the FilterNewLines for better flowed text handling - You now HAVE TO PUT TWO NEW LINES to end a paragraph.
 * FEATURE: Added new CSS tags to support positioning images/attachments/3gp videos
 * BUGFIX: Tries to use the date in the message (Thanks Ravan) I tried this once before and it never worked - hopefully this time it will.
 * BUGFIX: Added a workaround to fix the problem with Subscribe2 - it will now notify on posts that are not set to show up in the future.
-
-
 
 =  0.9.9.2 =
 * BUGFIX: Looks for the NOOP error and disgards it
@@ -972,6 +979,7 @@ plugin.  And the rest is history :)
 * FEATURE: Added option to turn of quoted printable decoding
 * FEATURE: :start tag - now postie looks for this tag before looking for you message - handy if your service provider prepends a message 
 * FEATURE: Template for translation now included
+
 =  0.9.8.4 =
 * BUGFIX: Fixed problem with config_form.php - select had "NULL" instead of ""
 * BUGFIX: 3g2 now supported
@@ -994,7 +1002,7 @@ plugin.  And the rest is history :)
 * BUGFIX: Email that has both Plain and HTML content will show the HTML content and not the plain if html is preferred
 
 =  0.9.8.2 =
-* BUGFIX: Fixed an extra new line after attachin non-image files.
+* BUGFIX: Fixed an extra new line after attaching non-image files.
 * BUGFIX: The Test system now displays any missing gd functions
 * BUGFIX: The test system was only using ImageMagick
 
@@ -1031,7 +1039,7 @@ plugin.  And the rest is history :)
 * FEATURE: Option to embed 3GP in QuickTime Controller.
 
 =  0.9.5.2 =
-* BUGFIX: gmt varialble not being set correctly
+* BUGFIX: gmt variable not being set correctly
 * BUGFIX: Changed the name of the Check Mail button to fix an issue with mod_security
 * BUGFIX: Fixed issue with Cronless-Postie
 * BUGFIX: There was an argument passed by reference incorrectly
@@ -1056,7 +1064,6 @@ plugin.  And the rest is history :)
 * BUGFIX: fixed issue of compatability with cjd-notepad
 * BUGFIX: Windows Works Now
 
-
 =  0.9.4 =
 * BUGFIX: Cronless Postie - fixed the include statement
 * BUGFIX: Authorized Addresses now supports a single address
@@ -1070,16 +1077,20 @@ plugin.  And the rest is history :)
 
 =  0.9.3 =
 * Bug fixes for IIS
+
 =  0.9.2 =
 * Moved to more of a DIRECTORY_SEPARATOR structure 
+
 =  0.9.1 =
 * Added a define to fix a problem with over including
+
 =  0.9 =
 * Converted to an honest to god plugin
 * BUGFIX: If you put a single category:subject it now works
 * BUGFIX: ? Special characters may be supported?  The test post now shows a lot of umlats and accents?
 * BUGFIX: The last ] in a subject with categories is now filtered out
 * FEATURE: -1- subject - will put the post in category 1
+
 =  0.312.13 =
 * Code clean up - The main loop is finally readable by even non programmers
 * FEATURE - You can now post to multiple categories at one time by using the [#],[Category Name], [Cat] in the subject
@@ -1091,40 +1102,48 @@ plugin.  And the rest is history :)
 * BUG FIX: Able to handle mis-mime typed images as long as they are named with .jpg/.gif/.png
 
 =  0.312.12 =
-* Code clean up - slowing shrinking the main to make it easiery to fix things
+* Code clean up - slowing shrinking the main to make it easier to fix things
 * FEATURE: Be able to turn on/off allowing comments in an email
 * BUG FIX: AppleDouble now mostly supported 
 * BUG FIX: MIME handling improved.
 * BUG FIX: Fix issue with timing delay
+
 =  0.312.11 =
 * FEATURE: Patterns to define where a sig starts are user configurable
 * FEATURE: Add filter options for banned file names
 * BUG FIX: Made it possible to turn off posting to the db for testing purposes
+
 =  0.312.10 =
 * FEATURE: Added in code to diplay the mime type of the file being linked to
 * BUG FIX: It now tests for the existance of the directories and makes sure
 * that the web server can write to them
+
 =  0.312.9 =
 * FEATURE:Should handle jpg as well as jpeg as the file type
 * BUG FIX: Now correctly handles the subject in the message
 * BUG FIX: Should handle Text preferences correctly 
+
 =  0.312.8 =
 * Some general code tidying. 
-* FEATURE: Can now have email from invalid email addresses automatically forwared
+* FEATURE: Can now have email from invalid email addresses automatically forwarded
 * to the admin's email account. This forward includes all attachments. 
 * Props to David Luden for getting this started.
 * Minor change: The system will continue if it runs into a message that doesn't have 
 * any content - it will also continue to process if it gets an email from 
 * someone not in the system. In the past this could result in deleted mail
 * if your cron job didn't run often enough.
+
 =  0.312.7 =
 * Confirm the handling of 3gp video for cell phones o
 * Added in new directive SUPPORTED_FILE_TYPES -if the mime type is listed here then the system will try to make a link to it without making a thumb nail.
+
 =  0.312.6 =
 * Bug Fix: Ok the last bug I fixed - actually caused another bug - man I should set up some unit tests. Now it handles mail from the nokia mail client correctly.
+
 =  0.312.5 =
-* Bug Fix : The system was accepting all test/* types. Now you can set a preference (defaults to text/plain)
+* Bug Fix : The system was accepting all text/* types. Now you can set a preference (defaults to text/plain)
 * to use as the main text for the post.
+
 =  0.312.4  =
 * Added in sanitize_title call suggested by Jemima
 * Added in ability to provide a subject in an mms - by using #Subject#
@@ -1146,6 +1165,7 @@ plugin.  And the rest is history :)
 
 =  0.312.2 =
 * BUGFIX: It now removes the delay tag from the message
+
 =  0.312.1 =
 * Added modification for placeholder support for images (David Luden)
 * Added in support to automatically scale down big images (Dirk Elmendorf)
@@ -1154,18 +1174,17 @@ plugin.  And the rest is history :)
 * Switch config options to defines to reduce the number of global variables (Dirk Elmendorf)
 * Added tests to make sure there is a trailing slash on the DIR definitions (Dirk Elmendorf)
 * Add tests to see if they have gd installed (Dirk Elmendorf)
-* Seperate the scaling out to a function for easier usage (Dirk Elmendorf)
+* Separate the scaling out to a function for easier usage (Dirk Elmendorf)
 * Add delay feature for future posting. (Dirk Elmendorf)
 * Added in ability to use strtotime if it is available (Dirk ELmendorf)
 
-* Todo
-* Have option to have the email that is rejected forwarded on to another address.
-* Fix bug that id still diplays the delay tag in the body 
 =  0.312 - 2005-03 =
 *  CHANGE FOR DEFAULT E-mail Categories, instead of [General] Subject you can now use General: Subject in the subject line.  Less typing, and there must be a space after the colon. 
 *  Fixed bugs with no default posting for categories and user 
+
 =  0.311 - 2005-01 =
 *  eep, major bug for pop3 server. Next time I test my code more before I released, fixed so that pop3 now works.`
+
 =  0.31 - 2004-12 & 2005-01 =
 * (Has it been this long, best get back into the swing of things... did most of this coding on my holiday as I didn't have a machine to play WoW on :)
 *  moved the deletion of pop3 emails into a check so that e-mails aren't deleted without proper checking.
